--- a/app/views/admin/dashboard/_admin_nav.html.haml
+++ b/app/views/admin/dashboard/_admin_nav.html.haml
@@ -4,7 +4,7 @@
       = link_to root_path do
         %img{src: "/assets/logo/bloom-logo-gray.svg", style: "max-height: 40px;"}
     .small-8.columns
-      %ul.l-no-style.f-right
+      %ul.l-no-style.f-right.m-bottom-0
         %li
           = link_to logout_path, class: "btn btn-empty btn-m btn-block" do
             %span.btn-text Logout
