--- a/app/assets/stylesheets/base/_variables.scss
+++ b/app/assets/stylesheets/base/_variables.scss
@@ -1,6 +1,6 @@
 // Typography
 ///////////////////////////////////////////////////////////////////////////////
-$sans-serif: Arial;
+$sans-serif: 'MuseoSans-500', Arial;
 $serif: $georgia;
 
 $base-font-family: 'MuseoSans-500', Arial, $sans-serif;
