using strong params

--- a/app/views/admin/users/edit.html.erb
+++ b/app/views/admin/users/edit.html.erb
@@ -26,8 +26,7 @@
   </div>
   
   <div class="actions"><%= f.submit %></div>
-  <div class="actions"><%= link_to "delete", @user, method: :delete,
-                  data: { confirm: "You sure?" } %>
+  <div class="actions"><%= link_to "back", admin_users_path %>
   </div>
 <% end %>
 
