JJ: make edit form for homepage

--- a/app/assets/stylesheets/base/base.scss
+++ b/app/assets/stylesheets/base/base.scss
@@ -9,5 +9,6 @@
 @import 'iconfonts/iconfonts';
 @import 'variables';
 @import 'mixins';
+@import 'breakpoints';
 @import 'animations';
 @import 'typography';
