--- a/app/assets/stylesheets/base/_mixins.scss
+++ b/app/assets/stylesheets/base/_mixins.scss
@@ -12,3 +12,14 @@
   *display: inline; /* IE7 inline-block hack */
   *zoom: 1;
 }
+
+@mixin accessibly-hidden{
+    border:0 !important;
+    clip:rect(0 0 0 0) !important;
+    height:1px !important;
+    margin:-1px !important;
+    overflow:hidden !important;
+    padding:0 !important;
+    position: absolute !important;
+    width:1px !important;
+}
