--- a/app/views/admin/successes/index.html.erb
+++ b/app/views/admin/successes/index.html.erb
@@ -19,7 +19,7 @@
         <td><%= success.author %></td>
         <td><%= success.blurb %></td>
         <td><%= link_to 'Edit', edit_admin_success_path(success) %></td>
-        <td><%= link_to 'Destroy', success, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Destroy', admin_success_path(success), method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
