--- a/app/assets/stylesheets/base/iconfonts/_streamline.css
+++ b/app/assets/stylesheets/base/iconfonts/_streamline.css
@@ -1,4 +1,6 @@
-@charset "UTF-8";
+@import url(https://fontastic.s3.amazonaws.com/SsxRvgtqxn3b8dVRxGaJGY/icons.css);
+
+/*@charset "UTF-8";
 
 @font-face {
   font-family: "bloom-consulting-group";
@@ -9,7 +11,6 @@
     font-url('icon_fonts/bloom-consulting-group.svg' + '#bloom-consulting-group') format("svg");
   font-weight: normal;
   font-style: normal;
-
 }
 
 [data-icon]:before {
@@ -125,9 +126,6 @@
 .bloom-practice-areas:before {
   content: "C";
 }
-.bloom-success-stories:before {
-  content: "D";
-}
 .bloom-team:before {
   content: "E";
 }
@@ -149,3 +147,10 @@
 .bloom-connection-2:before {
   content: "K";
 }
+.bloom-edit-2:before {
+  content: "D";
+}
+.bloom-bookmark-4:before {
+  content: "L";
+}
+*/
