JJ: s3 admin logo

--- a/app/views/layouts/_admin_nav.html.haml
+++ b/app/views/layouts/_admin_nav.html.haml
@@ -2,7 +2,7 @@
   .row.nav-inner
     .small-4.columns
       = link_to admin_url do
-        %img{src: "/assets/logo/bloom-logo-gray.svg", style: "max-height: 40px;"}
+        %img{src: "https://s3-us-west-2.amazonaws.com/bcg-site-assets/bloom-logo-gray.svg", style: "max-height: 40px;"}
     .small-8.columns
       - if logged_in?
         %ul.l-no-style.f-right.m-bottom-0
